Font size switcher overlapping issue resolved

--- a/assets/scss/frontend.scss
+++ b/assets/scss/frontend.scss
@@ -355,6 +355,7 @@ p .footnotes-link::after {
 	p {
 		font-weight: 400;
 		margin-top: 0;
+		line-height: 1.8;
 	}
 }
 .form-control {
